--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
     "@reduxjs/toolkit": "^2.2.7",
+    "@tanstack/react-query": "^5.52.2",
     "bootstrap": "^5.3.3",
     "date-fns": "^3.6.0",
     "emailjs": "^4.0.3",
     "emailjs-com": "^3.2.0",
     "firebase": "^10.13.0",
+    "luxon": "^3.5.0",
     "material-react-table": "^2.13.1",
     "primeicons": "^7.0.0",
     "primereact": "^10.8.2",
