--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "firebase": "^10.13.0",
     "luxon": "^3.5.0",
     "material-react-table": "^2.13.1",
+    "pdfmake": "^0.2.12",
     "primeicons": "^7.0.0",
     "primereact": "^10.8.2",
     "react": "^18.3.1",
