--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "primereact": "^10.8.2",
     "react": "^18.3.1",
     "react-avatar": "^5.0.3",
+    "react-beautiful-dnd": "^13.1.1",
     "react-bootstrap": "^2.10.4",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
