--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "react-hook-form": "^7.53.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
-    "sweetalert2": "^11.12.4"
+    "react-spinners": "^0.14.1",
+    "sweetalert2": "^11.12.4",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
