--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "date-fns": "^3.6.0",
     "emailjs": "^4.0.3",
     "emailjs-com": "^3.2.0",
+    "file-saver": "^2.0.5",
     "firebase": "^10.13.0",
     "luxon": "^3.5.0",
     "material-react-table": "^2.13.1",
@@ -39,7 +40,8 @@
     "react-router-dom": "^6.26.1",
     "react-spinners": "^0.14.1",
     "sweetalert2": "^11.12.4",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
