--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "emailjs-com": "^3.2.0",
     "file-saver": "^2.0.5",
     "firebase": "^10.13.0",
+    "konva": "^9.3.15",
     "luxon": "^3.5.0",
     "material-react-table": "^2.13.1",
     "pdfmake": "^0.2.12",
@@ -36,11 +37,13 @@
     "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
+    "react-konva": "^18.2.10",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
     "react-spinners": "^0.14.1",
     "sweetalert2": "^11.12.4",
     "uuid": "^10.0.0",
+    "uuidv4": "^6.2.13",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
