--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tanstack/react-query": "^5.52.2",
     "bootstrap": "^5.3.3",
     "date-fns": "^3.6.0",
+    "dayjs": "^1.11.13",
     "emailjs": "^4.0.3",
     "emailjs-com": "^3.2.0",
     "file-saver": "^2.0.5",
